package Model;

public  class AccelerationComponent implements Component {
    double ax;
    double ay;
    double az;
}
