package Model;

interface Component {
}
