package Model;

public class MassComponent implements Component {
    double mass;
}
