package Model;

public class NameComponent implements Component {
    String name;
}
