package Model;

public class PositionComponent implements Component {
    double x;
    double y;
    double z;
}
