package Model;

interface SimulationSystem {
    void update(Simulation sim);
}
