package Model;

public class VelocityComponent implements Component {
    double vx;
    double vy;
    double vz;
}
