@startuml ModelUML

'Interfacce per pattern ECS
interface Component{
}
interface SimulationSystem{
    ~ update(sim:Simulation):void
}
'Classi Component
class PositionComponent implements Component{
    ~double x
    ~double y
    ~double z
}
class VelocityComponent implements Component{
    ~double vx
    ~double vy
    ~double vz
}
class AccelerationComponent implements Component{
    ~double ax
    ~double ay
    ~double az
}
class MassComponent implements Component{
    ~double mass
}
class NameComponent implements Component{
    ~String name
}
'ComponentManager (gestione dei componenti)
class ComponentManager {

        - int size
        - int lastIndex
        - boolean isFull()
        - boolean isScarce()
        - grow():void 
        - resize(newSize:int):void 
        - shrink():void 
        ~ addComponent(component:Class<T>):void
        ~ <T extends Component> getComponent(component:Class<T>):T[] 

        ~ addEntity(Component... components):int
        ~ deleteEntity(int entityId):void
    }
    ComponentManager [Class] --> "*" Component : - storage

    'Simulation (Contiene tutti i dati per istanza di simulazione)
    + class Simulation  implements java.lang.Runnable{
        - double timeStep
        - LocalDateTime currentDate
        - LocalDateTime targetDate
        - double currentTime
        - double targetTime
        -Queue<SimulationSystem> preconditionsQueue
        -Queue<SimulationSystem> causesQueue
        -Queue<SimulationSystem> effectsQueue
        -Queue<SimulationSystem> postConditionsQueue
        +addPrecondition(system:SimulationSystem):void
        +addCause(system:SimulationSystem):void
        +addEffect(system:SimulationSystem):void
        +addPostCondition(system:SimulationSystem):void
    }
    Simulation "1" *-- "1" ComponentManager : - componentManager
    Simulation "1" o-- "many" SimulationSystem : - systemsQueue
    SimulationSystem --> Simulation : update():Simulation
    'Sistemi motore fisico
    class NewtonLawSystem implements SimulationSystem{
        - double G
        ~ update(sim:Simulation):void
    }
    class EulerIntegrationSystem implements SimulationSystem{
        ~ update(sim:Simulation):void
    }
    class ClearAccelerationSystem implements SimulationSystem {
        ~ update(sim:Simulation):void
    }
    class BasicRenderSystem implements SimulationSystem {
        - final long frequency
        - long lastRenderTime
        - executeRender(sim:Simulation):void
        ~ update(sim:Simulation):void
    }
    BasicRenderSystem --> BasicPhysicsSimulationDTO : instantiates
    'Builder pattern per creare istanze di simulazione
    class SimulationBuilder {
        -ComponentManager componentManager
        -Double dt
        -LocalDateTime localDate
        -LocalDateTime targetDate
        -Queue<SimulationSystem> preconditionsQueue
        -Queue<SimulationSystem> causesQueue
        -Queue<SimulationSystem> effectsQueue
        -Queue<SimulationSystem> postConditionsQueue
    }    
    SimulationBuilder --> Simulation : +build():Simulation

    
    'Entity Factory per creare entità
    + class EntityFactory {
        + <<static>> createBasicPhisicsBody(sim:Simulation,components:Component[]):void

    }
    EntityFactory --> Simulation: edits
    'Simulation Factory per creare Simulazioni
    + class SimulationFactory{
        + <<static>> createBasicPhisicsSimulation(dt:double, localDate:LocalDateTime, targetDate:LocalDateTime):Simulation
    }
    SimulationFactory --> SimulationBuilder : uses
    SimulationFactory --> Simulation : instantiates

    'Interfaccia per i dati all'esterno del pacchetto
    + interface SimulationState{
    + getLastState():SimulationState
    }
    Simulation *-- SimulationState

    'DTOs
    +class BasicPhysicsBodyDTO
    +class BasicPhysicsSimulationDTO implements SimulationState
    BasicPhysicsSimulationDTO "1" *-- "*" BasicPhysicsBodyDTO
@enduml
